# rspirv-bindgen

./: .gitignore  Cargo.toml  README.md
src/: c_struct.rs  debug.rs  entry_points.rs  execution_model.rs  lib.rs  main.rs  model.rs  push_constants.rs  specialization_constants.rs  test.rs
src/cli/: mod.rs  module.rs  write.rs
src/components/: mod.rs  specialization_constants.rs
src/components/descriptors/: descriptor_binding.rs  mod.rs
src/components/entry_points/: dispatch.rs  entry_point.rs  mod.rs
src/components/entry_points/vertex_inputs/: mod.rs  vertex_input.rs  (+1 more)
src/components/push_constants/: mod.rs  push_constant.rs
src/components/specialization_constants/: mod.rs  specialization_constant.rs
src/descriptors/: descriptor_binding.rs  descriptor_types.rs  mod.rs
src/entry_points/: dispatch.rs  mod.rs  vertex_input.rs
src/model/: array.rs  mod.rs  scalar.rs  structure.rs  vector.rs
src/model/structure/: member.rs  mod.rs
src/types/: array.rs  descriptor_types.rs  matrix.rs  mod.rs  scalar.rs  vector.rs
src/types/structure/: member.rs  mod.rs
src/utilities/: debug.rs  execution_model.rs  id.rs  mod.rs
tests/: generate_bindings.rs
tests/data/: README.md  descriptor_sets.slang  maximum_reduction.slang  push_constants.slang  render_capture.slang  render_line.slang  render_selection.slang  spec_constants.slang  tonemap_hdr_to_sdr.slang  utilities.slang
tests/data/spv/: descriptor_sets.spv  maximum_reduction.spv  push_constants.spv  render_capture.spv  render_line.spv  render_selection.spv  spec_constants.spv  tonemap_hdr_to_sdr.spv
